Fix image references and update risk/reward ratio to 2:17

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpguin - Automated Perpetuals Analyst</title>
-    <link rel="icon" type="image/png" href="perpguin_profile_picture.png">
+    <link rel="icon" type="image/png" href="assets/images/perpguin_profile_picture.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="perpguin_logo.png" alt="Perpguin Logo" class="logo-img">
+                    <img src="assets/images/perpguin_logo.png" alt="Perpguin Logo" class="logo-img">
                     <span>PERPGUIN</span>
                 </div>
                 <div class="nav-links">
@@ -40,7 +40,7 @@
                                 <span class="metric-label">Win Rate (7d)</span>
                             </div>
                             <div class="metric">
-                                <span class="metric-value" data-target="1.84">0:1</span>
+                                <span class="metric-value" data-target="2.17">2:17</span>
                                 <span class="metric-label">Risk/Reward</span>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                             <article class="tweet-article">
                                 <div class="tweet-header">
                                     <div class="tweet-avatar">
-                                        <img src="perpguin_profile_picture.png" alt="Perpguin" class="avatar-img">
+                        <img src="assets/images/perpguin_profile_picture.png" alt="Perpguin" class="avatar-img">
                                     </div>
                                     <div class="tweet-user-info">
                                         <div class="user-name-row">
