--- a/public/algorithm.html
+++ b/public/algorithm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithm - Perpguin</title>
-    <link rel="icon" type="image/png" href="perpguin_profile_picture.png">
+    <link rel="icon" type="image/png" href="assets/images/perpguin_profile_picture.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="perpguin_logo.png" alt="Perpguin Logo" class="logo-img">
+                    <img src="assets/images/perpguin_logo.png" alt="Perpguin Logo" class="logo-img">
                     <span>PERPGUIN</span>
                 </div>
                 <div class="nav-links">
